--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/context SRC_LIST)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/device SRC_LIST)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/libETH SRC_LIST)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/token SRC_LIST)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/HDKey SRC_LIST)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bigint SRC_LIST)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoin SRC_LIST)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/../deps/bitcoinABC SRC_LIST)
