--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -9,6 +9,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: module
+      run: git submodule update --init --recursive
     - name: cmake
       run: cmake .
     - name: make
