--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: module
       run: git submodule update --init --recursive
+      run: apt install libhidapi-dev
     - name: cmake
       run: cmake .
     - name: make
