--- a/JuBiterSDKDemo/Info.plist
+++ b/JuBiterSDKDemo/Info.plist
@@ -20,8 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>App need your approval to access to the bluetooth</string>
 	<key>NFCReaderUsageDescription</key>
-	<string>NFC</string>
+	<string>App need your approval to access to the NFC</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>请点击“允许”以允许访问。</string>
 	<key>NSCameraUsageDescription</key>
