--- a/JuBiterSDKDemo/Info.plist
+++ b/JuBiterSDKDemo/Info.plist
@@ -59,6 +59,7 @@
 	<array>
 		<string>313132323333343435353636373700</string>
 		<string>D1560001328300424C4400006E666301</string>
+		<string>D156000132834001</string>
 		<string>A000000151000000</string>
 	</array>
 </dict>
