1. 更新 NFC 接口对接 2. 补充 CMakeLists.txt 遗漏文件

--- a/trezor-crypto/CMakeLists.txt
+++ b/trezor-crypto/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(TrezorCrypto STATIC
     src/nist256p1.c
     src/groestl.c
     src/schnorr.c
+    src/cmac.c
 )
 
 target_compile_options(TrezorCrypto
